--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   padding-bottom: 20px;
-  margin-top: 20px;
 }
 
 
@@ -17,7 +16,6 @@
   width: 640px;
   border-radius: 10px;
   border: 1px solid hsl(242, 22%, 51%);
-  margin-bottom: 25px;
 }
 
 .bottomPartOfPost {
